[tool.poetry]
name = "qctrl-open-controls"
version = "11.0.0"
description = "Q-CTRL Open Controls"
license = "Apache-2.0"
authors = ["Q-CTRL <support@q-ctrl.com>"]
maintainers = ["Q-CTRL <support@q-ctrl.com>"]
readme = "README.md"
homepage = "https://q-ctrl.com"
repository = "https://github.com/qctrl/open-controls"
documentation = "https://docs.q-ctrl.com/open-controls/references/qctrl-open-controls/"
keywords = [
    "black opal",
    "boulder opal",
    "fire opal",
    "nisq",
    "open controls",
    "q control",
    "q ctrl",
    "q-control",
    "q-ctrl",
    "qcontrol",
    "qctrl",
    "quantum",
    "quantum algorithms",
    "quantum circuits",
    "quantum coding",
    "quantum coding software",
    "quantum computing",
    "quantum control",
    "quantum control software",
    "quantum control theory",
    "quantum engineering",
    "quantum error correction",
    "quantum firmware",
    "quantum fundamentals",
    "quantum sensing",
    "qubit",
    "qudit"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Distributed Computing"
]
packages = [
    { include = "qctrlopencontrols" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.25.2"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
qctrl-sphinx-theme = "^2.1.4"
sphinx = "^5.0.0"
tomli = "^2.0.1"

[tool.poetry.urls]
GitHub = "https://github.com/qctrl"
Twitter = "https://twitter.com/qctrlHQ"

[tool.isort]
profile = "black"
force_grid_wrap = "2"
known_first_party = "qctrlopencontrols"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
